# MachineLearningStudy

./: .gitignore  README.md  practice01.ipynb
Courera-IBM/: cheat_sheet.py  pyproject.toml
DoItDeepLearingBasic/: 02practice.ipynb  03practice.ipynb  practice01.ipynb
LangchainNote/: 01-Setting_and_Beginning.ipynb  02-LCEL.ipynb  pyproject.toml
RunHuggingFaceModel/: finetuning_model.ipynb  model.py  pyproject.toml  test.ipynb  test2.ipynb
RunHuggingFaceModel/app/: main.py  main2.py  run.py
langchain-chatbot/: README.md  main.py  pyproject.toml  requirements.txt
practice/: mnist_cnn.pt  step1_gpu_check.ipynb  step2_mnist_cnn.ipynb  step3_transfer_learning.ipynb  step3_transfer_learning2.ipynb
